--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTFg/mxhaNvuXFv5mwejM9",
+      "authorship_tag": "ABX9TyMes9upjb6f5GAEiGmH48NT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Read input"
+        "## Read Input"
       ],
       "metadata": {
         "id": "kX6hF9FVPT3d"
@@ -106,6 +106,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Read Test Input\n",
+        "\n",
         "Attempt to read test input. Needs verification, alternatively copy/paste test input into a multi-line string (important to not have a line break after the opening \"\"\"!)\n",
         "```\n",
         "\"\"\"line 0\n",
@@ -217,7 +219,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Utilities"
+        "## Utilities"
       ],
       "metadata": {
         "id": "dVkXKp3GPPba"
@@ -306,6 +308,15 @@
       ],
       "metadata": {
         "id": "PR-9PxgT8UGF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Read Input"
+      ],
+      "metadata": {
+        "id": "hMW9_hrBeRKd"
       }
     },
     {
@@ -624,9 +635,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IQLoFoYA9Jr1",
-        "outputId": "7a35f582-d716-4e40-b0f0-7d1f4bb4bcc3"
+        "outputId": "59b6e1b5-271a-416c-e42c-10ef640a294c"
       },
-      "execution_count": 19,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +651,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Prepare"
+        "### Part 1"
       ],
       "metadata": {
         "id": "U-vDsXgi9kqw"
@@ -666,9 +677,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LAA1VzcX9kWJ",
-        "outputId": "1fa0e729-e871-4e96-e853-377c42dd0501"
+        "outputId": "8ee1a620-7ac5-4d57-ced2-84c9c97bff27"
       },
-      "execution_count": 7,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
