feat: 2025, day 3 (wip)

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTv+12BdtU3w+iGvhC2SyE",
+      "authorship_tag": "ABX9TyM6WrmKWVsKbfouYdg7Whlh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 2,
       "metadata": {
         "id": "Qy0LSaFPC5ME",
         "collapsed": true
@@ -213,7 +213,7 @@
         "\n",
         "    return test_input"
       ],
-      "execution_count": 46,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "FwCcOq_MJ1RT"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -789,14 +789,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "5-sdcFMvpyIk",
         "outputId": "5a1d528b-8f2c-4f8a-d1ac-ca6f33cfa3f9"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1028,13 +1027,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "rX6gXtLdPM2U",
         "outputId": "53cfcfe4-5507-4543-e545-cc04d6de1bd8"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1062,13 +1060,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "YIQpCRYTPi-7",
         "outputId": "9c959138-b994-4109-9cc0-97f7b87404e7"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1089,14 +1086,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "o8sL_1kSqvxJ",
         "outputId": "0917a712-081b-4a17-fddc-988b05edb5b4"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1120,7 +1116,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Part 1"
+        "### Part 1\n",
+        "In every range (inclusive) find \"invalid\" ids, consisting of two equal groups of digits, add up such ids!"
       ],
       "metadata": {
         "id": "BxFBzh1Zq2lD"
@@ -1134,13 +1131,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Lb3gv8RdQatL",
         "outputId": "b175cbfd-643f-4fb7-bc64-56f953f128dc"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1162,13 +1158,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "grmLkUma2-E0",
         "outputId": "78f542ae-73d3-464a-ea7e-7162cd6a511f"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1185,7 +1180,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Part 2\n"
+        "### Part 2\n",
+        "Extend definition of invalid to arbritary-length group of digits repeated two or more times!\n"
       ],
       "metadata": {
         "id": "ghcaUYfQQAKB"
@@ -1212,7 +1208,7 @@
       "metadata": {
         "id": "o5uSID5OQLii"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1229,7 +1225,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1472,7 +1468,7 @@
         "id": "_KXOt4Cy6bpO",
         "outputId": "d33e8e72-4491-44c2-bc56-de2bb620e9df"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1485,6 +1481,309 @@
           "execution_count": 96
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 3"
+      ],
+      "metadata": {
+        "id": "-SDBFB5WfoM9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Read Input"
+      ],
+      "metadata": {
+        "id": "rLlxODPJftTt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_input_3 = get_aoc_test_input(2025, 3)"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wLAQ-RIlfpQh",
+        "outputId": "cbf87b95-a904-4621-dca5-c400a25348df"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attempting to retrieve Advent of Code 2025 Day 3 problem page from https://adventofcode.com/2025/day/3...\n",
+            "Successfully retrieved problem page HTML.\n",
+            "\n",
+            "First 500 characters of retrieved HTML:\n",
+            "---\n",
+            "<!DOCTYPE html>\n",
+            "<html lang=\"en-us\">\n",
+            "<head>\n",
+            "<meta charset=\"utf-8\"/>\n",
+            "<title>Day 3 - Advent of Code 2025</title>\n",
+            "<link rel=\"stylesheet\" type=\"text/css\" href=\"/static/style.css?32\"/>\n",
+            "<link rel=\"stylesheet alternate\" type=\"text/css\" href=\"/static/highcontrast.css?2\" title=\"High Contrast\"/>\n",
+            "<link rel=\"shortcut icon\" href=\"/favicon.png\"/>\n",
+            "<script>window.addEventListener('click', function(e,s,r){if(e.target.nodeName==='CODE'&&e.detail===3){s=window.getSelection();s.removeAllRanges();r=document.createRan\n",
+            "---\n",
+            "Found 24 <code> tags. Inspecting content for test input:\n",
+            "---\n",
+            "Candidate 1:\n",
+            "1\n",
+            "\n",
+            "Candidate 2:\n",
+            "9\n",
+            "\n",
+            "Candidate 3:\n",
+            "987654321111111\n",
+            "811111111111119\n",
+            "234234234234278\n",
+            "818181911112111\n",
+            "\n",
+            "Candidate 4:\n",
+            "12345\n",
+            "\n",
+            "Candidate 5:\n",
+            "2\n",
+            "\n",
+            "Candidate 6:\n",
+            "4\n",
+            "\n",
+            "Candidate 7:\n",
+            "24\n",
+            "\n",
+            "Candidate 8:\n",
+            "987654321111111\n",
+            "\n",
+            "Candidate 9:\n",
+            "98\n",
+            "\n",
+            "Candidate 10:\n",
+            "811111111111119\n",
+            "\n",
+            "Candidate 11:\n",
+            "8\n",
+            "\n",
+            "Candidate 12:\n",
+            "9\n",
+            "\n",
+            "Candidate 13:\n",
+            "89\n",
+            "\n",
+            "Candidate 14:\n",
+            "234234234234278\n",
+            "\n",
+            "Candidate 15:\n",
+            "78\n",
+            "\n",
+            "Candidate 16:\n",
+            "7\n",
+            "\n",
+            "Candidate 17:\n",
+            "8\n",
+            "\n",
+            "Candidate 18:\n",
+            "818181911112111\n",
+            "\n",
+            "Candidate 19:\n",
+            "92\n",
+            "\n",
+            "Candidate 20:\n",
+            "98\n",
+            "\n",
+            "Candidate 21:\n",
+            "89\n",
+            "\n",
+            "Candidate 22:\n",
+            "78\n",
+            "\n",
+            "Candidate 23:\n",
+            "92\n",
+            "\n",
+            "Candidate 24:\n",
+            "357\n",
+            "\n",
+            "Test input candidates extracted. Please review them to identify the actual test input.\n",
+            "Identified Test Input:\n",
+            "---------------------\n",
+            "1\n",
+            "---------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "z5SKCFnnf1Kr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_input_3 = \"\"\"987654321111111\n",
+        "811111111111119\n",
+        "234234234234278\n",
+        "818181911112111\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "9Ax-4SHBf_Zu"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_3 = get_aoc_input(2025, 3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ITeTVfjMgBlC",
+        "outputId": "cc4d7d59-5b30-4dc3-dd2c-0d469d494959"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attempting to retrieve Advent of Code 2025 Day 3 puzzle input from https://adventofcode.com/2025/day/3/input...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 1\n",
+        "Find max two-digit per line and add them up (digits must appear in order but may be spread out)!"
+      ],
+      "metadata": {
+        "id": "SVHjGXZ8gR5Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_2_max_digits(s: str, debug:bool = False) -> str:\n",
+        "  m1 = max(s)\n",
+        "  p1 = s.find(m1)\n",
+        "  r = m1 + max(s[p1+1:]) if p1 < len(s) - 1 else max(s[:p1]) + m1\n",
+        "  if debug:\n",
+        "    print(s, r)\n",
+        "  return r\n"
+      ],
+      "metadata": {
+        "id": "1QfyYsUBgIhI"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(map(int, map(lambda s: find_2_max_digits(s, True), test_input_3.splitlines())))\n"
+      ],
+      "metadata": {
+        "id": "-KiONiUCiuJ6",
+        "outputId": "83e8ca96-fc03-4956-b263-44590d98b86f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "987654321111111 98\n",
+            "811111111111119 89\n",
+            "234234234234278 78\n",
+            "818181911112111 92\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "357"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(map(int, map(find_2_max_digits, input_3.splitlines())))"
+      ],
+      "metadata": {
+        "id": "dUUomDUbjJ77",
+        "outputId": "f501bae6-69dc-4b51-dccc-a1e329ed9655",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "17443"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 2\n",
+        "Expand to 12 digits ;)"
+      ],
+      "metadata": {
+        "id": "jjvZYGUuKveo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# look for max\n",
+        "# leftmost  > 12 from end?\n",
+        "# yes - look for leftmost max right from that\n",
+        "#  > 11 from end ?\n",
+        "#  yes - ...\n",
+        "#  no - look for new max < max right from that\n",
+        "# no - look for new max < max and repeat\n",
+        "\n",
+        "def find_max_digit(s: str, debug:bool = False) -> str:\n"
+      ],
+      "metadata": {
+        "id": "yynY2fOpkRtn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
