--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6WrmKWVsKbfouYdg7Whlh",
+      "authorship_tag": "ABX9TyML0B4WjpqpPRlrd8dLPZl2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1622,15 +1622,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "z5SKCFnnf1Kr"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "test_input_3 = \"\"\"987654321111111\n",
         "811111111111119\n",
@@ -1641,7 +1632,7 @@
       "metadata": {
         "id": "9Ax-4SHBf_Zu"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1654,9 +1645,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ITeTVfjMgBlC",
-        "outputId": "cc4d7d59-5b30-4dc3-dd2c-0d469d494959"
+        "outputId": "636ef626-1323-41fe-90a2-f60f75f83c35"
       },
-      "execution_count": 10,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -1691,7 +1682,7 @@
       "metadata": {
         "id": "1QfyYsUBgIhI"
       },
-      "execution_count": 57,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1700,13 +1691,13 @@
         "sum(map(int, map(lambda s: find_2_max_digits(s, True), test_input_3.splitlines())))\n"
       ],
       "metadata": {
-        "id": "-KiONiUCiuJ6",
-        "outputId": "83e8ca96-fc03-4956-b263-44590d98b86f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-KiONiUCiuJ6",
+        "outputId": "14912605-5fac-4921-dba8-13708b94cfc4"
       },
-      "execution_count": 58,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1726,7 +1717,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 7
         }
       ]
     },
@@ -1736,11 +1727,11 @@
         "sum(map(int, map(find_2_max_digits, input_3.splitlines())))"
       ],
       "metadata": {
-        "id": "dUUomDUbjJ77",
-        "outputId": "f501bae6-69dc-4b51-dccc-a1e329ed9655",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dUUomDUbjJ77",
+        "outputId": "f501bae6-69dc-4b51-dccc-a1e329ed9655"
       },
       "execution_count": 59,
       "outputs": [
@@ -1769,21 +1760,178 @@
     {
       "cell_type": "code",
       "source": [
-        "# look for max\n",
-        "# leftmost  > 12 from end?\n",
-        "# yes - look for leftmost max right from that\n",
-        "#  > 11 from end ?\n",
-        "#  yes - ...\n",
-        "#  no - look for new max < max right from that\n",
-        "# no - look for new max < max and repeat\n",
-        "\n",
-        "def find_max_digit(s: str, debug:bool = False) -> str:\n"
+        "def find_max_digits(s, n, boundary:str = '9', debug:bool = False):\n",
+        "  if n == 0:\n",
+        "    return ''\n",
+        "  m = max((c for c in s if c <= boundary), default=None)  # max char < boundary\n",
+        "  p = s.find(m) if m else None  # leftmost occurrence\n",
+        "  if p <= len(s) - n:  # enough digits to the right to fill up n digits\n",
+        "    if debug:\n",
+        "      print(f\"{s}, n={n}: +'{m}' @ {p}\")\n",
+        "    return m + find_max_digits(s[p+1:], n - 1, debug=debug)  # collect n-1 digits to the right, reset boundary to find any digit\n",
+        "  else:\n",
+        "    if debug:\n",
+        "      print(f\"{s}, n={n}: -'{m}' @ {p}\")\n",
+        "    return find_max_digits(s, n, boundary=str(int(m) - 1), debug=debug)  # try smaller digit in same range n (lower boundary)"
       ],
       "metadata": {
         "id": "yynY2fOpkRtn"
       },
-      "execution_count": null,
+      "execution_count": 115,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(map(int, map(lambda s: find_max_digits(s, 12, debug=True), test_input_3.splitlines())))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "hANafjWmC6Wf",
+        "outputId": "841da550-b94b-4f0b-b430-7a405d2b9bab"
+      },
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "987654321111111, n=12: +'9' @ 0\n",
+            "87654321111111, n=11: +'8' @ 0\n",
+            "7654321111111, n=10: +'7' @ 0\n",
+            "654321111111, n=9: +'6' @ 0\n",
+            "54321111111, n=8: +'5' @ 0\n",
+            "4321111111, n=7: +'4' @ 0\n",
+            "321111111, n=6: +'3' @ 0\n",
+            "21111111, n=5: +'2' @ 0\n",
+            "1111111, n=4: +'1' @ 0\n",
+            "111111, n=3: +'1' @ 0\n",
+            "11111, n=2: +'1' @ 0\n",
+            "1111, n=1: +'1' @ 0\n",
+            "811111111111119, n=12: -'9' @ 14\n",
+            "811111111111119, n=12: +'8' @ 0\n",
+            "11111111111119, n=11: -'9' @ 13\n",
+            "11111111111119, n=11: +'1' @ 0\n",
+            "1111111111119, n=10: -'9' @ 12\n",
+            "1111111111119, n=10: +'1' @ 0\n",
+            "111111111119, n=9: -'9' @ 11\n",
+            "111111111119, n=9: +'1' @ 0\n",
+            "11111111119, n=8: -'9' @ 10\n",
+            "11111111119, n=8: +'1' @ 0\n",
+            "1111111119, n=7: -'9' @ 9\n",
+            "1111111119, n=7: +'1' @ 0\n",
+            "111111119, n=6: -'9' @ 8\n",
+            "111111119, n=6: +'1' @ 0\n",
+            "11111119, n=5: -'9' @ 7\n",
+            "11111119, n=5: +'1' @ 0\n",
+            "1111119, n=4: -'9' @ 6\n",
+            "1111119, n=4: +'1' @ 0\n",
+            "111119, n=3: -'9' @ 5\n",
+            "111119, n=3: +'1' @ 0\n",
+            "11119, n=2: -'9' @ 4\n",
+            "11119, n=2: +'1' @ 0\n",
+            "1119, n=1: +'9' @ 3\n",
+            "234234234234278, n=12: -'8' @ 14\n",
+            "234234234234278, n=12: -'7' @ 13\n",
+            "234234234234278, n=12: +'4' @ 2\n",
+            "234234234278, n=11: -'8' @ 11\n",
+            "234234234278, n=11: -'7' @ 10\n",
+            "234234234278, n=11: -'4' @ 2\n",
+            "234234234278, n=11: +'3' @ 1\n",
+            "4234234278, n=10: -'8' @ 9\n",
+            "4234234278, n=10: -'7' @ 8\n",
+            "4234234278, n=10: +'4' @ 0\n",
+            "234234278, n=9: -'8' @ 8\n",
+            "234234278, n=9: -'7' @ 7\n",
+            "234234278, n=9: -'4' @ 2\n",
+            "234234278, n=9: -'3' @ 1\n",
+            "234234278, n=9: +'2' @ 0\n",
+            "34234278, n=8: -'8' @ 7\n",
+            "34234278, n=8: -'7' @ 6\n",
+            "34234278, n=8: -'4' @ 1\n",
+            "34234278, n=8: +'3' @ 0\n",
+            "4234278, n=7: -'8' @ 6\n",
+            "4234278, n=7: -'7' @ 5\n",
+            "4234278, n=7: +'4' @ 0\n",
+            "234278, n=6: -'8' @ 5\n",
+            "234278, n=6: -'7' @ 4\n",
+            "234278, n=6: -'4' @ 2\n",
+            "234278, n=6: -'3' @ 1\n",
+            "234278, n=6: +'2' @ 0\n",
+            "34278, n=5: -'8' @ 4\n",
+            "34278, n=5: -'7' @ 3\n",
+            "34278, n=5: -'4' @ 1\n",
+            "34278, n=5: +'3' @ 0\n",
+            "4278, n=4: -'8' @ 3\n",
+            "4278, n=4: -'7' @ 2\n",
+            "4278, n=4: +'4' @ 0\n",
+            "278, n=3: -'8' @ 2\n",
+            "278, n=3: -'7' @ 1\n",
+            "278, n=3: +'2' @ 0\n",
+            "78, n=2: -'8' @ 1\n",
+            "78, n=2: +'7' @ 0\n",
+            "8, n=1: +'8' @ 0\n",
+            "818181911112111, n=12: -'9' @ 6\n",
+            "818181911112111, n=12: +'8' @ 0\n",
+            "18181911112111, n=11: -'9' @ 5\n",
+            "18181911112111, n=11: +'8' @ 1\n",
+            "181911112111, n=10: -'9' @ 3\n",
+            "181911112111, n=10: +'8' @ 1\n",
+            "1911112111, n=9: +'9' @ 1\n",
+            "11112111, n=8: -'2' @ 4\n",
+            "11112111, n=8: +'1' @ 0\n",
+            "1112111, n=7: -'2' @ 3\n",
+            "1112111, n=7: +'1' @ 0\n",
+            "112111, n=6: -'2' @ 2\n",
+            "112111, n=6: +'1' @ 0\n",
+            "12111, n=5: -'2' @ 1\n",
+            "12111, n=5: +'1' @ 0\n",
+            "2111, n=4: +'2' @ 0\n",
+            "111, n=3: +'1' @ 0\n",
+            "11, n=2: +'1' @ 0\n",
+            "1, n=1: +'1' @ 0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3121910778619"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 114
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(map(int, map(lambda s: find_max_digits(s, 12), input_3.splitlines())))"
+      ],
+      "metadata": {
+        "id": "7pxuy3CKJy2o",
+        "outputId": "caea3c95-93ce-47a2-84bb-bdda40f9cbea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "172167155440541"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
     }
   ]
 }
