chore: fix comment

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyML0B4WjpqpPRlrd8dLPZl2",
+      "authorship_tag": "ABX9TyMLfr60lCRd3ZlPcrYT5tHZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1763,7 +1763,7 @@
         "def find_max_digits(s, n, boundary:str = '9', debug:bool = False):\n",
         "  if n == 0:\n",
         "    return ''\n",
-        "  m = max((c for c in s if c <= boundary), default=None)  # max char < boundary\n",
+        "  m = max((c for c in s if c <= boundary), default=None)  # max char <= boundary\n",
         "  p = s.find(m) if m else None  # leftmost occurrence\n",
         "  if p <= len(s) - n:  # enough digits to the right to fill up n digits\n",
         "    if debug:\n",
@@ -1913,11 +1913,11 @@
         "sum(map(int, map(lambda s: find_max_digits(s, 12), input_3.splitlines())))"
       ],
       "metadata": {
-        "id": "7pxuy3CKJy2o",
-        "outputId": "caea3c95-93ce-47a2-84bb-bdda40f9cbea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7pxuy3CKJy2o",
+        "outputId": "caea3c95-93ce-47a2-84bb-bdda40f9cbea"
       },
       "execution_count": 70,
       "outputs": [
