chore: 2025, day 4 (wip)

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLfr60lCRd3ZlPcrYT5tHZ",
+      "authorship_tag": "ABX9TyNpOFrF7UAzOwbrDUpTDyhA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "Qy0LSaFPC5ME",
         "collapsed": true
@@ -127,7 +127,7 @@
         "import requests\n",
         "from bs4 import BeautifulSoup\n",
         "\n",
-        "def get_aoc_test_input(year, day):\n",
+        "def get_aoc_test_input(year, day, candidate = 1):\n",
         "    \"\"\"\n",
         "    Attempts to retrieve the Advent of Code test input for a given year and day.\n",
         "    Prints all candidates for verification and returns first candidate on problem page.\n",
@@ -136,6 +136,7 @@
         "    Args:\n",
         "        year (int): The Advent of Code year.\n",
         "        day (int): The Advent of Code day.\n",
+        "        candidate (int): The test input candidate to use, 1-based, defaults to the first (1)\n",
         "\n",
         "    Returns:\n",
         "        str: The input data as a string, or None if retrieval fails.\n",
@@ -199,21 +200,21 @@
         "            print(f\"Candidate {i+1}:\\n{content}\\n\")\n",
         "\n",
         "    if test_input_candidates:\n",
-        "        print(\"Test input candidates extracted. Please review them to identify the actual test input.\")\n",
+        "        print(\"Test input candidates extracted. Please review them to identify the actual test input and repeat with concrete candidate number (1-based) if needed.\")\n",
         "    else:\n",
         "        print(\"No text content found within <code> tags. Test input might be in another tag or format.\")\n",
         "        return None\n",
         "\n",
-        "    test_input = test_input_candidates[0] # Assuming Candidate 1 is the correct test input\n",
+        "    test_input = test_input_candidates[candidate - 1]\n",
         "\n",
-        "    print(\"Identified Test Input:\")\n",
+        "    print(f\"Identified Test Input (candidate {candidate}):\")\n",
         "    print(\"---------------------\")\n",
         "    print(test_input)\n",
         "    print(\"---------------------\")\n",
         "\n",
         "    return test_input"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -289,7 +290,7 @@
       "metadata": {
         "id": "FwCcOq_MJ1RT"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -1932,6 +1933,188 @@
           "execution_count": 70
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 4"
+      ],
+      "metadata": {
+        "id": "ewTG3w3xz8an"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Read Input"
+      ],
+      "metadata": {
+        "id": "BPh_OK02z_Xd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " test_input_4 = get_aoc_test_input(2025, 4, 2)"
+      ],
+      "metadata": {
+        "id": "yS69P4R3z-a_",
+        "outputId": "de529a2c-5782-49f4-813a-ef9018427587",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attempting to retrieve Advent of Code 2025 Day 4 problem page from https://adventofcode.com/2025/day/4...\n",
+            "Successfully retrieved problem page HTML.\n",
+            "\n",
+            "First 500 characters of retrieved HTML:\n",
+            "---\n",
+            "<!DOCTYPE html>\n",
+            "<html lang=\"en-us\">\n",
+            "<head>\n",
+            "<meta charset=\"utf-8\"/>\n",
+            "<title>Day 4 - Advent of Code 2025</title>\n",
+            "<link rel=\"stylesheet\" type=\"text/css\" href=\"/static/style.css?32\"/>\n",
+            "<link rel=\"stylesheet alternate\" type=\"text/css\" href=\"/static/highcontrast.css?2\" title=\"High Contrast\"/>\n",
+            "<link rel=\"shortcut icon\" href=\"/favicon.png\"/>\n",
+            "<script>window.addEventListener('click', function(e,s,r){if(e.target.nodeName==='CODE'&&e.detail===3){s=window.getSelection();s.removeAllRanges();r=document.createRan\n",
+            "---\n",
+            "Found 5 <code> tags. Inspecting content for test input:\n",
+            "---\n",
+            "Candidate 1:\n",
+            "@\n",
+            "\n",
+            "Candidate 2:\n",
+            "..@@.@@@@.\n",
+            "@@@.@.@.@@\n",
+            "@@@@@.@.@@\n",
+            "@.@@@@..@.\n",
+            "@@.@@@@.@@\n",
+            ".@@@@@@@.@\n",
+            ".@.@.@.@@@\n",
+            "@.@@@.@@@@\n",
+            ".@@@@@@@@.\n",
+            "@.@.@@@.@.\n",
+            "\n",
+            "Candidate 3:\n",
+            "13\n",
+            "\n",
+            "Candidate 4:\n",
+            "x\n",
+            "\n",
+            "Candidate 5:\n",
+            "..xx.xx@x.\n",
+            "x@@.@.@.@@\n",
+            "@@@@@.x.@@\n",
+            "@.@@@@..@.\n",
+            "x@.@@@@.@x\n",
+            ".@@@@@@@.@\n",
+            ".@.@.@.@@@\n",
+            "x.@@@.@@@@\n",
+            ".@@@@@@@@.\n",
+            "x.x.@@@.x.\n",
+            "\n",
+            "Test input candidates extracted. Please review them to identify the actual test input and repeat with concrete candidate number (1-based) if needed.\n",
+            "Identified Test Input (candidate 2):\n",
+            "---------------------\n",
+            "..@@.@@@@.\n",
+            "@@@.@.@.@@\n",
+            "@@@@@.@.@@\n",
+            "@.@@@@..@.\n",
+            "@@.@@@@.@@\n",
+            ".@@@@@@@.@\n",
+            ".@.@.@.@@@\n",
+            "@.@@@.@@@@\n",
+            ".@@@@@@@@.\n",
+            "@.@.@@@.@.\n",
+            "---------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_4 = get_aoc_input(2025, 4)"
+      ],
+      "metadata": {
+        "id": "AN-vRSon0JsS",
+        "outputId": "6d8d15e4-344a-4368-ee2c-e2136edc449e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attempting to retrieve Advent of Code 2025 Day 4 puzzle input from https://adventofcode.com/2025/day/4/input...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid, height, width = read_grid(test_input_4)"
+      ],
+      "metadata": {
+        "id": "nkaq12RX1LEG"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jY4cMZce1UrJ",
+        "outputId": "882b172a-be30-49ed-8932-568792280b46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(['..@@.@@@@.',\n",
+              "  '@@@.@.@.@@',\n",
+              "  '@@@@@.@.@@',\n",
+              "  '@.@@@@..@.',\n",
+              "  '@@.@@@@.@@',\n",
+              "  '.@@@@@@@.@',\n",
+              "  '.@.@.@.@@@',\n",
+              "  '@.@@@.@@@@',\n",
+              "  '.@@@@@@@@.',\n",
+              "  '@.@.@@@.@.'],\n",
+              " 10,\n",
+              " 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5QHS693m1Wrz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
