--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpOFrF7UAzOwbrDUpTDyhA",
+      "authorship_tag": "ABX9TyM94wpdo5CpSIHEl+JGp2AR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 42,
       "metadata": {
         "id": "Qy0LSaFPC5ME",
         "collapsed": true
@@ -214,7 +214,7 @@
         "\n",
         "    return test_input"
       ],
-      "execution_count": 2,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -266,6 +266,11 @@
         "  y, x = p\n",
         "  return grid[y][x]\n",
         "\n",
+        "def safe_get_cell(p, grid, dimensions):\n",
+        "  if in_range(p, dimensions):\n",
+        "    return get_cell(p, grid)\n",
+        "  return None\n",
+        "\n",
         "# use with itertools islice(limit), islice(start, limit, step), takewhile(predicate, iterate(...))\n",
         "def iterate(start, func):\n",
         "  current = start\n",
@@ -290,7 +295,7 @@
       "metadata": {
         "id": "FwCcOq_MJ1RT"
       },
-      "execution_count": 3,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -1514,7 +1519,7 @@
         "id": "wLAQ-RIlfpQh",
         "outputId": "cbf87b95-a904-4621-dca5-c400a25348df"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1633,7 +1638,7 @@
       "metadata": {
         "id": "9Ax-4SHBf_Zu"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1648,7 +1653,7 @@
         "id": "ITeTVfjMgBlC",
         "outputId": "636ef626-1323-41fe-90a2-f60f75f83c35"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1683,7 +1688,7 @@
       "metadata": {
         "id": "1QfyYsUBgIhI"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1698,7 +1703,7 @@
         "id": "-KiONiUCiuJ6",
         "outputId": "14912605-5fac-4921-dba8-13708b94cfc4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1734,7 +1739,7 @@
         "id": "dUUomDUbjJ77",
         "outputId": "f501bae6-69dc-4b51-dccc-a1e329ed9655"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1778,7 +1783,7 @@
       "metadata": {
         "id": "yynY2fOpkRtn"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1794,7 +1799,7 @@
         "id": "hANafjWmC6Wf",
         "outputId": "841da550-b94b-4f0b-b430-7a405d2b9bab"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1920,7 +1925,7 @@
         "id": "7pxuy3CKJy2o",
         "outputId": "caea3c95-93ce-47a2-84bb-bdda40f9cbea"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1955,16 +1960,16 @@
     {
       "cell_type": "code",
       "source": [
-        " test_input_4 = get_aoc_test_input(2025, 4, 2)"
+        "test_input_4 = get_aoc_test_input(2025, 4, 2)"
       ],
       "metadata": {
         "id": "yS69P4R3z-a_",
-        "outputId": "de529a2c-5782-49f4-813a-ef9018427587",
+        "outputId": "e1f0a7f5-ca21-4af7-fbd1-10d2829403a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -2045,12 +2050,12 @@
       ],
       "metadata": {
         "id": "AN-vRSon0JsS",
-        "outputId": "6d8d15e4-344a-4368-ee2c-e2136edc449e",
+        "outputId": "edf403df-49f1-45a9-8f65-ab86d9717516",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -2062,59 +2067,79 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 1, find number of @ around each, counting overlaping cells as 1"
+      ],
+      "metadata": {
+        "id": "t_Tt1A31kO48"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "grid, height, width = read_grid(test_input_4)"
       ],
       "metadata": {
-        "id": "nkaq12RX1LEG"
+        "id": "vbKd6m5to8c7"
       },
-      "execution_count": 13,
+      "execution_count": 67,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "[(y, x) for y in range(height) for x in range(width) if get_cell((y, x), grid) == '.']\n",
+        "# flatmap into set for dx in dirs45 etc."
+      ],
       "metadata": {
-        "id": "jY4cMZce1UrJ",
-        "outputId": "882b172a-be30-49ed-8932-568792280b46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GeaTiOwUpUnj",
+        "outputId": "02088f0d-b166-4733-ea28-8faba32658da"
       },
-      "execution_count": 14,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(['..@@.@@@@.',\n",
-              "  '@@@.@.@.@@',\n",
-              "  '@@@@@.@.@@',\n",
-              "  '@.@@@@..@.',\n",
-              "  '@@.@@@@.@@',\n",
-              "  '.@@@@@@@.@',\n",
-              "  '.@.@.@.@@@',\n",
-              "  '@.@@@.@@@@',\n",
-              "  '.@@@@@@@@.',\n",
-              "  '@.@.@@@.@.'],\n",
-              " 10,\n",
-              " 10)"
+              "[(0, 0),\n",
+              " (0, 1),\n",
+              " (0, 4),\n",
+              " (0, 9),\n",
+              " (1, 3),\n",
+              " (1, 5),\n",
+              " (1, 7),\n",
+              " (2, 5),\n",
+              " (2, 7),\n",
+              " (3, 1),\n",
+              " (3, 6),\n",
+              " (3, 7),\n",
+              " (3, 9),\n",
+              " (4, 2),\n",
+              " (4, 7),\n",
+              " (5, 0),\n",
+              " (5, 8),\n",
+              " (6, 0),\n",
+              " (6, 2),\n",
+              " (6, 4),\n",
+              " (6, 6),\n",
+              " (7, 1),\n",
+              " (7, 5),\n",
+              " (8, 0),\n",
+              " (8, 9),\n",
+              " (9, 1),\n",
+              " (9, 3),\n",
+              " (9, 7),\n",
+              " (9, 9)]"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 75
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5QHS693m1Wrz"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
