--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM94wpdo5CpSIHEl+JGp2AR",
+      "authorship_tag": "ABX9TyNTFuy9Sidej6q75YWbUrwe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 22,
       "metadata": {
         "id": "Qy0LSaFPC5ME",
         "collapsed": true
@@ -214,7 +214,7 @@
         "\n",
         "    return test_input"
       ],
-      "execution_count": 77,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "FwCcOq_MJ1RT"
       },
-      "execution_count": 78,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1964,12 +1964,13 @@
       ],
       "metadata": {
         "id": "yS69P4R3z-a_",
-        "outputId": "2fcda5d4-16c2-4dc6-ed9b-27347d1fe001",
+        "outputId": "4fb512df-bc68-41c0-9211-5dd12cd25214",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true
       },
-      "execution_count": 80,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -2050,12 +2051,12 @@
       ],
       "metadata": {
         "id": "AN-vRSon0JsS",
-        "outputId": "edf403df-49f1-45a9-8f65-ab86d9717516",
+        "outputId": "17636423-8b8a-405f-b8e0-346a125f43d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -2069,7 +2070,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Part 1, find number of @ around each, counting overlaping cells as 1"
+        "### Part 1\n",
+        "find number of @ (\"p\"aper rolls) around each . (\"f\"ree positions) that are themselves not surrounded by more than 3 @, counting overlaping cells as 1"
       ],
       "metadata": {
         "id": "t_Tt1A31kO48"
@@ -2078,68 +2080,297 @@
     {
       "cell_type": "code",
       "source": [
-        "grid, height, width = read_grid(test_input_4)"
+        "grid, height, width = read_grid(input_4)"
       ],
       "metadata": {
         "id": "vbKd6m5to8c7"
       },
-      "execution_count": 81,
+      "execution_count": 87,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "[(y, x) for y in range(height) for x in range(width) if get_cell((y, x), grid) == '.']\n",
-        "# flatmap into set for dx in dirs45 etc."
+        "def get_p_to_remove(grid):\n",
+        "  return { p\n",
+        "    for f in\n",
+        "      # free positions . (for forklifts) (list)\n",
+        "      [(y, x) for y in range(height) for x in range(width) if get_cell((y, x), grid) == '.']\n",
+        "\n",
+        "    # paper rolls @ around these\n",
+        "    for p in [vec_add(f, d) for d in dirs45]\n",
+        "    if safe_get_cell(p, grid, (height, width)) == '@' \\\n",
+        "      # if not more than 3 around\n",
+        "      and len([pp for pp in [vec_add(p, d) for d in dirs45]\n",
+        "              if safe_get_cell(pp, grid, (height, width)) == '@']) <= 3\n",
+        "  }\n"
+      ],
+      "metadata": {
+        "id": "Nuf-4O31HpeN"
+      },
+      "execution_count": 88,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(get_p_to_remove(grid))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "GeaTiOwUpUnj",
-        "outputId": "f68651bf-58b6-4b73-cb5c-58486067321d"
+        "id": "LqjyETzOHt5w",
+        "outputId": "2f1374d5-94eb-4fe5-e968-557a2a6a4bf0"
       },
-      "execution_count": 82,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[(0, 0),\n",
-              " (0, 1),\n",
-              " (0, 4),\n",
-              " (0, 9),\n",
-              " (1, 3),\n",
-              " (1, 5),\n",
-              " (1, 7),\n",
-              " (2, 5),\n",
-              " (2, 7),\n",
-              " (3, 1),\n",
-              " (3, 6),\n",
-              " (3, 7),\n",
-              " (3, 9),\n",
-              " (4, 2),\n",
-              " (4, 7),\n",
-              " (5, 0),\n",
-              " (5, 8),\n",
-              " (6, 0),\n",
-              " (6, 2),\n",
-              " (6, 4),\n",
-              " (6, 6),\n",
-              " (7, 1),\n",
-              " (7, 5),\n",
-              " (8, 0),\n",
-              " (8, 9),\n",
-              " (9, 1),\n",
-              " (9, 3),\n",
-              " (9, 7),\n",
-              " (9, 9)]"
+              "1569"
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 89
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 2\n",
+        "Remove the @ (p) found in part 1 and repeat until no more can be removed, sum up number of removed @"
+      ],
+      "metadata": {
+        "id": "6e3wX0UfNyyD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "dXoI8i9JPtNa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def remove_p(grid, p_to_remove):\n",
+        "  return [[get_cell((y, x), grid) if (y, x) not in p_to_remove else '.' for x in range(width)] for y in range(height)]"
+      ],
+      "metadata": {
+        "id": "DNQuCahROT99"
+      },
+      "execution_count": 90,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rec(grid_removed_stop):\n",
+        "    (g, r, s) = grid_removed_stop\n",
+        "    to_remove = get_p_to_remove(g)\n",
+        "    return remove_p(g, to_remove), r + len(to_remove), len(to_remove) == 0\n",
+        "\n",
+        "# last\n",
+        "(g, r, _) = [x for x in takewhile(lambda grs: not grs[2], iterate((grid, 0, False), rec))][-1]\n",
+        "r"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "L73IlDbGOtnD",
+        "outputId": "9a75a858-bb1f-4c9a-bf69-35e13939b1a3"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9280"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RHj6m_4LOwul"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 5"
+      ],
+      "metadata": {
+        "id": "u-qmQwxqX2xh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Read Input"
+      ],
+      "metadata": {
+        "id": "TBIb8ea5YhJ_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_input_5 = get_aoc_test_input(2025, 5)"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "nA3_z4SoYBZI",
+        "outputId": "e44745c0-e42b-43c1-946b-97b1f44f20a6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attempting to retrieve Advent of Code 2025 Day 5 problem page from https://adventofcode.com/2025/day/5...\n",
+            "Successfully retrieved problem page HTML.\n",
+            "\n",
+            "First 500 characters of retrieved HTML:\n",
+            "---\n",
+            "<!DOCTYPE html>\n",
+            "<html lang=\"en-us\">\n",
+            "<head>\n",
+            "<meta charset=\"utf-8\"/>\n",
+            "<title>Day 5 - Advent of Code 2025</title>\n",
+            "<link rel=\"stylesheet\" type=\"text/css\" href=\"/static/style.css?32\"/>\n",
+            "<link rel=\"stylesheet alternate\" type=\"text/css\" href=\"/static/highcontrast.css?2\" title=\"High Contrast\"/>\n",
+            "<link rel=\"shortcut icon\" href=\"/favicon.png\"/>\n",
+            "<script>window.addEventListener('click', function(e,s,r){if(e.target.nodeName==='CODE'&&e.detail===3){s=window.getSelection();s.removeAllRanges();r=document.createRan\n",
+            "---\n",
+            "Found 16 <code> tags. Inspecting content for test input:\n",
+            "---\n",
+            "Candidate 1:\n",
+            "3-5\n",
+            "10-14\n",
+            "16-20\n",
+            "12-18\n",
+            "\n",
+            "1\n",
+            "5\n",
+            "8\n",
+            "11\n",
+            "17\n",
+            "32\n",
+            "\n",
+            "Candidate 2:\n",
+            "3-5\n",
+            "\n",
+            "Candidate 3:\n",
+            "3\n",
+            "\n",
+            "Candidate 4:\n",
+            "4\n",
+            "\n",
+            "Candidate 5:\n",
+            "5\n",
+            "\n",
+            "Candidate 6:\n",
+            "1\n",
+            "\n",
+            "Candidate 7:\n",
+            "5\n",
+            "\n",
+            "Candidate 8:\n",
+            "3-5\n",
+            "\n",
+            "Candidate 9:\n",
+            "8\n",
+            "\n",
+            "Candidate 10:\n",
+            "11\n",
+            "\n",
+            "Candidate 11:\n",
+            "10-14\n",
+            "\n",
+            "Candidate 12:\n",
+            "17\n",
+            "\n",
+            "Candidate 13:\n",
+            "16-20\n",
+            "\n",
+            "Candidate 14:\n",
+            "12-18\n",
+            "\n",
+            "Candidate 15:\n",
+            "32\n",
+            "\n",
+            "Candidate 16:\n",
+            "3\n",
+            "\n",
+            "Test input candidates extracted. Please review them to identify the actual test input and repeat with concrete candidate number (1-based) if needed.\n",
+            "Identified Test Input (candidate 1):\n",
+            "---------------------\n",
+            "3-5\n",
+            "10-14\n",
+            "16-20\n",
+            "12-18\n",
+            "\n",
+            "1\n",
+            "5\n",
+            "8\n",
+            "11\n",
+            "17\n",
+            "32\n",
+            "---------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_5 = get_aoc_input(2025, 5)"
+      ],
+      "metadata": {
+        "id": "7IZLX9zxYLH8",
+        "outputId": "99240e8e-3e25-4255-e443-5b6058ec1996",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attempting to retrieve Advent of Code 2025 Day 5 puzzle input from https://adventofcode.com/2025/day/5/input...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pKCK6-uOYVyw"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
