chore: format, cell order

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTFuy9Sidej6q75YWbUrwe",
+      "authorship_tag": "ABX9TyPvXMeRmZc3+1P5fSZ53/21",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2068,16 +2068,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "### Part 1\n",
-        "find number of @ (\"p\"aper rolls) around each . (\"f\"ree positions) that are themselves not surrounded by more than 3 @, counting overlaping cells as 1"
-      ],
-      "metadata": {
-        "id": "t_Tt1A31kO48"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "grid, height, width = read_grid(input_4)"
@@ -2087,6 +2077,16 @@
       },
       "execution_count": 87,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 1\n",
+        "find number of @ (\"p\"aper rolls) around each . (\"f\"ree positions) that are themselves not surrounded by more than 3 @, counting overlaping cells as 1"
+      ],
+      "metadata": {
+        "id": "t_Tt1A31kO48"
+      }
     },
     {
       "cell_type": "code",
@@ -2169,14 +2169,13 @@
     {
       "cell_type": "code",
       "source": [
-        "def rec(grid_removed_stop):\n",
+        "def recursion(grid_removed_stop):\n",
         "    (g, r, s) = grid_removed_stop\n",
         "    to_remove = get_p_to_remove(g)\n",
         "    return remove_p(g, to_remove), r + len(to_remove), len(to_remove) == 0\n",
         "\n",
-        "# last\n",
-        "(g, r, _) = [x for x in takewhile(lambda grs: not grs[2], iterate((grid, 0, False), rec))][-1]\n",
-        "r"
+        "# last number of removed (summed up)\n",
+        "[x for x in takewhile(lambda grs: not grs[2], iterate((grid, 0, False), recursion))][-1][1]"
       ],
       "metadata": {
         "colab": {
@@ -2184,9 +2183,9 @@
         },
         "collapsed": true,
         "id": "L73IlDbGOtnD",
-        "outputId": "9a75a858-bb1f-4c9a-bf69-35e13939b1a3"
+        "outputId": "ffb4d6e1-9f7b-4eee-c5de-d2d644aaa1e8"
       },
-      "execution_count": 92,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2196,18 +2195,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 98
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "RHj6m_4LOwul"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2234,11 +2224,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "nA3_z4SoYBZI",
-        "outputId": "e44745c0-e42b-43c1-946b-97b1f44f20a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nA3_z4SoYBZI",
+        "outputId": "e44745c0-e42b-43c1-946b-97b1f44f20a6"
       },
       "execution_count": 94,
       "outputs": [
@@ -2346,11 +2336,11 @@
         "input_5 = get_aoc_input(2025, 5)"
       ],
       "metadata": {
-        "id": "7IZLX9zxYLH8",
-        "outputId": "99240e8e-3e25-4255-e443-5b6058ec1996",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7IZLX9zxYLH8",
+        "outputId": "99240e8e-3e25-4255-e443-5b6058ec1996"
       },
       "execution_count": 97,
       "outputs": [
